--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
+.App main {
+  margin-bottom: 32px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 1023px) {
+  .App main {
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
+.App .control .icon {
+  opacity: .5;
+  padding: 10px;
+}
+.App .actions img {
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+.visuallyhidden { 
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
+}
+.hide {
+  display: none;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .card {
+  border: 1px solid rgba(50, 152, 220, .6);
+  border-radius: 5px;
+  height: 100%;
+}
+.App .card:hover,
+.App .card:focus {
+  border: 1px solid rgba(50, 152, 220, 1);
+}
+.App .card-content {
+  padding: 1rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App .card-content .content {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .card-content .product-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-top: 1em;
+}
+.App .card-content .has-discount {
+  text-decoration: line-through;
+}
+.App .card-content .is-discount {
+  color: #d47974;
+}
+.App .card-content .more-colors {
+  color: #bdbdc2;
+  font-weight: bold;
+}
+.App .card-content .button {
+  text-transform: uppercase;
+  border: none;
+  max-width: 100px;
+  margin: 0 auto;
 }
